Update Dockerfile and AuthContext.js

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,27 @@ WORKDIR /backend
 
 # Install PostgreSQL development packages
 RUN apt-get update \
-    && apt-get install -y libpq-dev \
+    && apt-get install -y \
+    wget \
+    curl \
+    unzip \
+    xvfb \
+    libxi6 \
+    libgconf-2-4 \libpq-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Download and install Google Chrome
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
+    && dpkg -i google-chrome-stable_current_amd64.deb || apt-get install -fy 
+
+# Download and install ChromeDriver
+RUN wget https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/120.0.6099.71/linux64/chromedriver-linux64.zip \
+    && unzip chromedriver-linux64.zip \
+    && mv chromedriver-linux64/chromedriver /usr/bin/chromedriver \
+    && chown root:root /usr/bin/chromedriver \
+    && chmod +x /usr/bin/chromedriver \
+    && rm -f chromedriver-linux64.zip
+
 
 # Copy requirements.txt to the container
 COPY requirements.txt .
