--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     container_name: classwise-frontend
     ports:
       - "3000:3000"
+    environment:
+      - backend_url=${BACKEND_URL}
+    networks:
+      - classwise-network
     depends_on:
       - backend
 
@@ -15,23 +19,28 @@ services:
       context: ./backend  # Adjust the path to your backend code
       dockerfile: Dockerfile
     container_name: classwise-backend
-    env_file:
-      - backend/.env
     ports:
       - "8000:8000"
-    # environment:
-    #   - SECRET_KEY=${SECRET_KEY}
-    #   - DB_NAME=${DB_NAME}
-    #   - DB_USER=${DB_USER}
-    #   - DB_PASSWORD=${DB_PASSWORD}
-    #   - DB_HOST=${DB_HOST}
-    depends_on:
-      - db
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+    networks:
+      - classwise-network
+  #   depends_on:
+  #     - db
 
-  db:
-    image: postgres:latest
-    container_name: classwise-db
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
+  # db:
+  #   image: postgres:latest
+  #   container_name: classwise-db
+  #   env_file:
+  #     - .env
+  #   ports:
+  #     - "5432:5432"
+
+networks:
+  classwise-network:
+    driver: bridge
