--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ PyJWT==2.8.0
 PySocks==1.7.1
 python-decouple==3.7
 python3-openid==3.2.0
+gunicorn==21.2.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 selenium==4.15.2
