--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DB_HOST="localhost"
 # DB_HOST="host.docker.internal"
 DB_PORT="5432"
 DB_NAME="classwise"
-BACKEND_URL="ClassWise-env-1.eba-arxeajxn.us-east-2.elasticbeanstalk.com"
+# BACKEND_URL="classwise-97f745bcadbb.herokuapp.com"
