--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ cryptography==41.0.7
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.8.0rc2
+dj-database-url==2.1.0
 Django==4.1.6
 django-cors-headers==3.13.0
 django-templated-mail==1.1.1
@@ -85,6 +86,7 @@ tornado==6.3.2
 traitlets==5.9.0
 trio==0.23.1
 trio-websocket==0.11.1
+typing-extensions==4.9.0
 tzdata==2023.3
 urllib3==2.1.0
 wcwidth==0.2.6
