--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
+gunicorn==21.2.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-dateutil==2.8.2
-python-decouple==3.8
+python-decouple==3.8    
 requests-oauthlib==1.3.1
 selenium==4.15.
 
