--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+debugpy==1.6.7
 dj-database-url==2.1.0
 Django==4.1.6
 django-cors-headers==3.13.0
@@ -5,12 +6,26 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
-gunicorn==21.2.0
+iniconfig==2.0.0
+ipykernel==6.23.1
+ipython==8.13.2
+psutil==5.9.5
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
 PyJWT==2.8.0
-python-dateutil==2.8.2
-python-decouple==3.8    
+PySocks==1.7.1
+python-decouple==3.7
+python3-openid==3.2.0
+gunicorn==21.2.0
+requests==2.31.0
 requests-oauthlib==1.3.1
-selenium==4.15.
-
+selenium==4.15.2
+social-auth-app-django==5.4.0
+social-auth-core==4.5.1
+sqlparse==0.4.3
+stack-data==0.6.2
+tomli==2.0.1
+tornado==6.3.2
+traitlets==5.9.0
+whitenoise==6.6.0   
