Update backend and frontend configurations

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ DB_HOST="localhost"
 DB_PORT="5432"
 DB_NAME="classwise"
 BACKEND_URL="http://localhost:8000"
+DATABASE_URL="postgres://postgres:ddan452w@localhost:5432/classwise"
